# ScriptsC

./: .gitignore
binding_python/: ccalc.cpp  ccalc.hpp  main.py
intercor/: main.cpp
lidando_com_json/: CMakeLists.txt  main.py
lidando_com_json/src/: main.cpp
referencias_ponteiros/: main  main.cpp
requests_c++/: connect.cpp  connect.hpp  main.py
rest_http/: CMakeLists.txt
rest_http/src/: main.cpp
